# anomie

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.github/workflows/: build.yml
corpus/txt/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
src/: analysis.rs  config.rs  engine.rs  errors.rs  main.rs  mutate.rs  target.rs  types.rs  utils.rs
src/formats/: jpeg.rs  mod.rs  png.rs  string.rs  template.rs  txt.rs
src/fuzzers/: jpeg.rs  mod.rs  string.rs  txt.rs
src/mutations/: png.rs
tests/: base.rs
