[package]
name = "anomie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
jpeg-encoder = "0.6.1"
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
wait-timeout = "0.2.1"
